[package]
name = "convex"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "The representation projective transformation"
categories = ["mathematics", "graphics"]
keywords = ["math", "projective", "transformation"]
repository = "https://github.com/oovm/transform-rs"
documentation = "https://docs.rs/projective"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
num-traits = "0.2.14"

[dev-dependencies]

[features]
default = []

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "./src/katex.html"]