[package]
name = "convex"
version = "0.0.1"
authors = ["Aster <192607617@qq.com>"]
description = "The representation projective transformation"
categories = ["mathematics", "graphics"]
keywords = ["math", "projective", "transformation"]
repository = "https://github.com/oovm/transform-rs"
documentation = "https://docs.rs/convex"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies.graphics-shape]
version = "0.0.2"
optional = true
path = "../shapes"

[dev-dependencies]

[features]
default = ["shape"]
shape = ["graphics-shape"]

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "./src/katex.html"]