[package]
name = "delaunay"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "The representation of delaunay triangulation"
categories = ["mathematics"]
keywords = ["math", "delaunay", "triangulation"]
repository = "https://github.com/oovm/shape-rs"
documentation = "https://docs.rs/delaunay"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
num-traits = "0.2.14"

[dev-dependencies]

[features]
default = []

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "./src/katex.html"]