[package]
name = "shape-core"
version = "0.0.7"
authors = ["Aster <192607617@qq.com>"]
description = "Definition of geometry shapes"
repository = "https://github.com/oovm/shape-rs"
documentation = "https://docs.rs/shape-core"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
num-traits = "0.2.14"
bitflags = "1.3.2"
serde = { version = "1.0.136", features = ["derive"] }
rand = { version = "0.8.5", optional = true }

[dependencies.projective]
version = "0.3.0"
path = "../projective"

[dev-dependencies]

[features]
default = []

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "./src/katex.html"]

