[package]
name = "shape-core"
version = "0.1.15"
authors = ["Aster <192607617@qq.com>"]
description = "Definition of geometry shapes"
repository = "https://github.com/oovm/shape-rs"
documentation = "https://docs.rs/shape-core"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
color-core = "0.1.6"
itertools = "0.11.0"
num-traits = "0.2.17"
#bitflags = "2.1.0"
serde = { version = "1.0.189", features = ["derive"], optional = true}
rand = { version = "0.8.5", optional = true }
wolfram-expr = { version = "0.1.4", optional = true }

[dependencies.projective]
version = "0.3.0"
path = "../projective"

[dependencies.distantia]
version = "0.0.0"
#path = "../shape-mesh"


[dev-dependencies]

[features]
default = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--html-in-header", "./src/katex.html"]

