[package]
name = "shape-mesh"
version = "0.0.1"
authors = ["Aster <192607617@qq.com>"]
description = "The shared library for distances"
categories = ["mathematics", "graphics"]
keywords = ["math", "projective", "transformation"]
repository = "https://github.com/oovm/shape-rs"
documentation = "https://docs.rs/shape-mesh"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
num-traits = "0.2.16"



[dev-dependencies]

[features]
default = []
