[package]
name = "shape-svg"
version = "0.0.4"
authors = ["Aster <192607617@qq.com>"]
description = "SVG representation of shapes"
repository = "https://github.com/oovm/shape-rs"
documentation = "https://docs.rs/shape-svg"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"


[dependencies]
svg = "0.13.1"
#serde = "1.0.159"


[dependencies.shape-core]
version = "0.1.*"
path = "../shape-core"

[dev-dependencies]

[features]
default = []


