[package]
name = "shape-svg"
version = "0.0.3"
authors = ["Aster <192607617@qq.com>"]
description = "SVG representation of shapes"
repository = "https://github.com/oovm/shape-rs"
documentation = "https://docs.rs/shape-svg"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"


[dependencies]
serde = "1.0.136"
serde_derive = "1.0.136"


[dependencies.shape-core]
version = "0.1.*"
path = "../shape-core"

[dev-dependencies]

[features]
default = []


