[package]
name = "shape-wolfram"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Wolfram representation of shapes"
repository = "https://github.com/oovm/shape-rs"
documentation = "https://docs.rs/shape-wolfram"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"


[dependencies]
wolfram-library-link = "0.2.3"

[dependencies.shape-core]
version = "0.0.*"
path = "../shape-core"

[dev-dependencies]

[features]
default = []


