[package]
name = "graphics-shape"
version = "0.0.1"
authors = ["Aster <192607617@qq.com>"]
description = "The representation of a circle"
repository = "https://github.com/oovm/smallest-enclosing-ball"
documentation = "https://docs.rs/graphics-shape"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
num-traits = "0.2.14"
projective = "0.2.5"
serde = {version = "1.0.136", features = ["derive"]}
rand = {version = "0.8.5", optional = true}

[dev-dependencies]

[features]
default = []

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "./src/katex.html"]

[package.metadata.wee]
t = "cargo test"
p = "cargo publish --allow-dirty"

