[package]
name = "venn"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "venn-diagram"
repository = "https://github.com/oovm/shape-rs"
documentation = "https://docs.rs/shape-core"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
num-traits = "0.2.16"
bitflags = "2.4.0"
serde = { version = "1.0.188", features = ["derive"] }
rand = { version = "0.8.5", optional = true }


[dev-dependencies]

[features]
default = []

[package.metadata.docs.rs]

rustdoc-args = ["--html-in-header", "./src/katex.html"]

